O tabuleiro roda e é possível guardar jogo.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/mainActivityLayoutId"
     tools:context="com.example.helder.chessapp.MainActivity">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Novo jogo"
+        android:text="New Game"
         android:id="@+id/buttonNewGame"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -21,9 +22,20 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Carregar jogo"
+        android:text="Load Game"
         android:id="@+id/buttonLoadingGame"
         android:layout_below="@+id/buttonNewGame"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="54dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Chess Game"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:textColor="#ffffff" />
 </RelativeLayout>
