--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/mainActivityLayoutId"
-    tools:context="com.example.helder.chessapp.MainActivity">
+
+    tools:context="com.example.helder.chessapp.MainActivity"
+    android:background="@drawable/background">
 
     <Button
         android:layout_width="wrap_content"
